compiler/tests/fixtures/invalid/semantics/condition_references_spawn_role.viv
// Invalid: condition references spawn role

action bad-spawn-cond:
    roles:
        @creator:
            as: initiator
        @artifact:
            as: item, spawn
            spawn: ~createItem("thing")
    conditions:
        @artifact.quality > 5
